add oauth authentication use hash routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid ">
-  <div class="row justify-content-center border border-dark text-center" style="min-height: 10vh">
-    <h1>{{ title }}!</h1>
+  <div class="row justify-content-center border border-dark text-center"
+       style="min-height: 10vh">
+    <img alt="kappa-chat" [src]="'assets/icons/kappa-chat.png'" [width]="150" [height]="50"/>
   </div>
   <router-outlet></router-outlet>
 </div>
