--- a/src/app/public/login/login.component.scss
+++ b/src/app/public/login/login.component.scss
@@ -99,7 +99,7 @@ input[type=button]:active, input[type=submit]:active, input[type=reset]:active {
   transform: scale(0.95);
 }
 
-input[type=text] {
+input[type=text], input[type=password] {
   background-color: #f6f6f6;
   color: #0d0d0d;
   padding: 15px 32px;
